--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
         "name": "(gdb) Launch",
         "type": "cppdbg",
         "request": "launch",
-        "program": "${workspaceFolder}/bin/game",
+        "program": "${workspaceFolder}/bin/water_woeter.exe",
         "args": [],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
