--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,26 @@
             "ignoreFailures": true
           }
         ]
-      }
+      },
+      {
+      "name": "Debug via gdb (MSYS2)",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/bin/water_woeter.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
+    }
     ]
   }
