--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,100 +1,13 @@
 {
-    "files.associations": {
-      "iostream": "cpp",
-      "functional": "cpp",
-      "cctype": "cpp",
-      "clocale": "cpp",
-      "cmath": "cpp",
-      "cstdarg": "cpp",
-      "cstddef": "cpp",
-      "cstdio": "cpp",
-      "cstdlib": "cpp",
-      "cstring": "cpp",
-      "cwchar": "cpp",
-      "cwctype": "cpp",
-      "array": "cpp",
-      "atomic": "cpp",
-      "bit": "cpp",
-      "*.tcc": "cpp",
-      "compare": "cpp",
-      "concepts": "cpp",
-      "cstdint": "cpp",
-      "deque": "cpp",
-      "unordered_map": "cpp",
-      "vector": "cpp",
-      "exception": "cpp",
-      "algorithm": "cpp",
-      "iterator": "cpp",
-      "memory": "cpp",
-      "memory_resource": "cpp",
-      "numeric": "cpp",
-      "optional": "cpp",
-      "random": "cpp",
-      "string": "cpp",
-      "string_view": "cpp",
-      "system_error": "cpp",
-      "tuple": "cpp",
-      "type_traits": "cpp",
-      "utility": "cpp",
-      "initializer_list": "cpp",
-      "iosfwd": "cpp",
-      "istream": "cpp",
-      "limits": "cpp",
-      "new": "cpp",
-      "numbers": "cpp",
-      "ostream": "cpp",
-      "ranges": "cpp",
-      "stdexcept": "cpp",
-      "streambuf": "cpp",
-      "typeinfo": "cpp",
-      "xstring": "cpp",
-      "ctime": "cpp",
-      "ios": "cpp",
-      "list": "cpp",
-      "xfacet": "cpp",
-      "xhash": "cpp",
-      "xiosbase": "cpp",
-      "xlocale": "cpp",
-      "xlocinfo": "cpp",
-      "xlocnum": "cpp",
-      "xmemory": "cpp",
-      "xstddef": "cpp",
-      "xtr1common": "cpp",
-      "xutility": "cpp",
-      "fstream": "cpp",
-      "sstream": "cpp",
-      "bitset": "cpp",
-      "charconv": "cpp",
-      "chrono": "cpp",
-      "condition_variable": "cpp",
-      "map": "cpp",
-      "set": "cpp",
-      "expected": "cpp",
-      "ratio": "cpp",
-      "format": "cpp",
-      "iomanip": "cpp",
-      "mutex": "cpp",
-      "semaphore": "cpp",
-      "shared_mutex": "cpp",
-      "span": "cpp",
-      "stop_token": "cpp",
-      "text_encoding": "cpp",
-      "thread": "cpp",
-      "cinttypes": "cpp",
-      "variant": "cpp",
-      "csignal": "cpp",
-      "unordered_set": "cpp",
-      "regex": "cpp"
+    "terminal.integrated.profiles.windows": {
+        "MSYS2 MINGW64": {
+            "path": "C:\\msys64\\usr\\bin\\bash.exe",
+            "args": ["--login", "-i"],
+            "env": {
+                "MSYSTEM": "MINGW64",
+                "CHERE_INVOKING": "1"
+            }
+        }
     },
-    "terminal.integrated.defaultProfile.windows": "MINGW64",
-"terminal.integrated.profiles.windows": {
-  "MINGW64": {
-    "path": "C:\\msys64\\usr\\bin\\bash.exe",
-    "args": ["--login", "-i"]
-  }
-},
-"cSpell.words": [
-  "tokel"
-]
-
+    "terminal.integrated.defaultProfile.windows": "MSYS2 MINGW64"
 }
