--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Debug water_woeter",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/water_woeter.exe",
+            "program": "${workspaceFolder}/bin/pompion.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
